Projeto_Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> PROGRAM ID SEMI opt_variable block DOT
Rule 2     opt_variable -> variables
Rule 3     opt_variable -> empty
Rule 4     variables -> VAR vars
Rule 5     vars -> listVar DOISPONTOS datatype SEMI
Rule 6     vars -> listVar DOISPONTOS datatype SEMI vars
Rule 7     listVar -> ID
Rule 8     listVar -> ID VIRG listVar
Rule 9     datatype -> simpleType
Rule 10    datatype -> structuredType
Rule 11    simpleType -> INTEGER_TYPE
Rule 12    simpleType -> BOOLEAN_TYPE
Rule 13    simpleType -> STRING_TYPE
Rule 14    simpleType -> REAL_TYPE
Rule 15    simpleType -> CHAR_TYPE
Rule 16    structuredType -> arrayType
Rule 17    arrayType -> ARRAY LSQBRACKET NUMBER RANGE NUMBER RSQBRACKET OF simpleType
Rule 18    empty -> <empty>
Rule 19    variable -> ID
Rule 20    variable -> ID LSQBRACKET expression RSQBRACKET
Rule 21    block -> BEGIN stmt_list opt_semi END
Rule 22    opt_semi -> SEMI
Rule 23    opt_semi -> empty
Rule 24    stmt_list -> stmt
Rule 25    stmt_list -> stmt_list SEMI stmt
Rule 26    stmt -> assign_stmt
Rule 27    stmt -> conditional_stmt
Rule 28    stmt -> cicle_stmt
Rule 29    stmt -> readLn_stmt
Rule 30    stmt -> write_stmt
Rule 31    stmt -> writeln_stmt
Rule 32    assign_stmt -> variable ASSIGN expression
Rule 33    expression -> logical_or_expr
Rule 34    logical_or_expr -> logical_or_expr OR logical_and_expr
Rule 35    logical_or_expr -> logical_and_expr
Rule 36    logical_and_expr -> logical_and_expr AND logical_not_expr
Rule 37    logical_and_expr -> logical_not_expr
Rule 38    logical_not_expr -> NOT logical_not_expr
Rule 39    logical_not_expr -> relational_expr
Rule 40    relational_expr -> simple_exp
Rule 41    relational_expr -> simple_exp relational_operator simple_exp
Rule 42    relational_operator -> EQUAL
Rule 43    relational_operator -> NEQUAL
Rule 44    relational_operator -> LESSTHEN
Rule 45    relational_operator -> LESSEQUALS
Rule 46    relational_operator -> GREATTHAN
Rule 47    relational_operator -> GREATEQUALS
Rule 48    simple_exp -> simple_exp add_op termo
Rule 49    simple_exp -> termo
Rule 50    add_op -> PLUS
Rule 51    add_op -> MINUS
Rule 52    termo -> termo mul_op fator
Rule 53    termo -> fator
Rule 54    mul_op -> MULT
Rule 55    mul_op -> DIVIDE
Rule 56    mul_op -> MODULO
Rule 57    mul_op -> DIV_INT
Rule 58    fator -> LENGTH LPAREN expression RPAREN
Rule 59    fator -> LPAREN expression RPAREN
Rule 60    fator -> variable
Rule 61    fator -> NUMBER
Rule 62    fator -> REAL_LITERAL
Rule 63    fator -> STRING_LITERAL
Rule 64    fator -> TRUE
Rule 65    fator -> FALSE
Rule 66    readLn_stmt -> READLN LPAREN variable RPAREN
Rule 67    write_stmt -> WRITE LPAREN output_args RPAREN
Rule 68    writeln_stmt -> WRITELN LPAREN output_args RPAREN
Rule 69    writeln_stmt -> WRITELN LPAREN RPAREN
Rule 70    output_args -> output_item
Rule 71    output_args -> output_item VIRG output_args
Rule 72    output_item -> STRING_LITERAL
Rule 73    output_item -> variable
Rule 74    conditional_stmt -> if_stmt
Rule 75    if_stmt -> IF expression THEN stmt
Rule 76    if_stmt -> IF expression THEN stmt ELSE stmt
Rule 77    cicle_stmt -> while_stmt
Rule 78    cicle_stmt -> for_stmt
Rule 79    while_stmt -> WHILE expression DO cicle_body
Rule 80    cicle_body -> block
Rule 81    cicle_body -> stmt
Rule 82    for_stmt -> FOR assign_stmt TO simple_exp DO cicle_body
Rule 83    for_stmt -> FOR assign_stmt DOWNTO simple_exp DO cicle_body

Terminals, with rules where they appear

AND                  : 36
ARRAY                : 17
ASSIGN               : 32
BEGIN                : 21
BOOLEAN_TYPE         : 12
CHAR_TYPE            : 15
DIVIDE               : 55
DIV_INT              : 57
DO                   : 79 82 83
DOISPONTOS           : 5 6
DOT                  : 1
DOWNTO               : 83
ELSE                 : 76
END                  : 21
EQUAL                : 42
FALSE                : 65
FOR                  : 82 83
GREATEQUALS          : 47
GREATTHAN            : 46
ID                   : 1 7 8 19 20
IF                   : 75 76
INTEGER_TYPE         : 11
LENGTH               : 58
LESSEQUALS           : 45
LESSTHEN             : 44
LPAREN               : 58 59 66 67 68 69
LSQBRACKET           : 17 20
MINUS                : 51
MODULO               : 56
MULT                 : 54
NEQUAL               : 43
NOT                  : 38
NUMBER               : 17 17 61
OF                   : 17
OR                   : 34
PLUS                 : 50
PROGRAM              : 1
RANGE                : 17
READLN               : 66
REAL_LITERAL         : 62
REAL_TYPE            : 14
RPAREN               : 58 59 66 67 68 69
RSQBRACKET           : 17 20
SEMI                 : 1 5 6 22 25
STRING_LITERAL       : 63 72
STRING_TYPE          : 13
THEN                 : 75 76
TO                   : 82
TRUE                 : 64
VAR                  : 4
VIRG                 : 8 71
WHILE                : 79
WRITE                : 67
WRITELN              : 68 69
error                : 

Nonterminals, with rules where they appear

Programa             : 0
add_op               : 48
arrayType            : 16
assign_stmt          : 26 82 83
block                : 1 80
cicle_body           : 79 82 83
cicle_stmt           : 28
conditional_stmt     : 27
datatype             : 5 6
empty                : 3 23
expression           : 20 32 58 59 75 76 79
fator                : 52 53
for_stmt             : 78
if_stmt              : 74
listVar              : 5 6 8
logical_and_expr     : 34 35 36
logical_not_expr     : 36 37 38
logical_or_expr      : 33 34
mul_op               : 52
opt_semi             : 21
opt_variable         : 1
output_args          : 67 68 71
output_item          : 70 71
readLn_stmt          : 29
relational_expr      : 39
relational_operator  : 41
simpleType           : 9 17
simple_exp           : 40 41 41 48 82 83
stmt                 : 24 25 75 76 76 81
stmt_list            : 21 25
structuredType       : 10
termo                : 48 49 52
variable             : 32 60 66 73
variables            : 2
vars                 : 4 6
while_stmt           : 77
write_stmt           : 30
writeln_stmt         : 31

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . PROGRAM ID SEMI opt_variable block DOT

    PROGRAM         shift and go to state 2

    Programa                       shift and go to state 1

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> PROGRAM . ID SEMI opt_variable block DOT

    ID              shift and go to state 3


state 3

    (1) Programa -> PROGRAM ID . SEMI opt_variable block DOT

    SEMI            shift and go to state 4


state 4

    (1) Programa -> PROGRAM ID SEMI . opt_variable block DOT
    (2) opt_variable -> . variables
    (3) opt_variable -> . empty
    (4) variables -> . VAR vars
    (18) empty -> .

    VAR             shift and go to state 8
    BEGIN           reduce using rule 18 (empty -> .)

    opt_variable                   shift and go to state 5
    variables                      shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) Programa -> PROGRAM ID SEMI opt_variable . block DOT
    (21) block -> . BEGIN stmt_list opt_semi END

    BEGIN           shift and go to state 10

    block                          shift and go to state 9

state 6

    (2) opt_variable -> variables .

    BEGIN           reduce using rule 2 (opt_variable -> variables .)


state 7

    (3) opt_variable -> empty .

    BEGIN           reduce using rule 3 (opt_variable -> empty .)


state 8

    (4) variables -> VAR . vars
    (5) vars -> . listVar DOISPONTOS datatype SEMI
    (6) vars -> . listVar DOISPONTOS datatype SEMI vars
    (7) listVar -> . ID
    (8) listVar -> . ID VIRG listVar

    ID              shift and go to state 13

    vars                           shift and go to state 11
    listVar                        shift and go to state 12

state 9

    (1) Programa -> PROGRAM ID SEMI opt_variable block . DOT

    DOT             shift and go to state 14


state 10

    (21) block -> BEGIN . stmt_list opt_semi END
    (24) stmt_list -> . stmt
    (25) stmt_list -> . stmt_list SEMI stmt
    (26) stmt -> . assign_stmt
    (27) stmt -> . conditional_stmt
    (28) stmt -> . cicle_stmt
    (29) stmt -> . readLn_stmt
    (30) stmt -> . write_stmt
    (31) stmt -> . writeln_stmt
    (32) assign_stmt -> . variable ASSIGN expression
    (74) conditional_stmt -> . if_stmt
    (77) cicle_stmt -> . while_stmt
    (78) cicle_stmt -> . for_stmt
    (66) readLn_stmt -> . READLN LPAREN variable RPAREN
    (67) write_stmt -> . WRITE LPAREN output_args RPAREN
    (68) writeln_stmt -> . WRITELN LPAREN output_args RPAREN
    (69) writeln_stmt -> . WRITELN LPAREN RPAREN
    (19) variable -> . ID
    (20) variable -> . ID LSQBRACKET expression RSQBRACKET
    (75) if_stmt -> . IF expression THEN stmt
    (76) if_stmt -> . IF expression THEN stmt ELSE stmt
    (79) while_stmt -> . WHILE expression DO cicle_body
    (82) for_stmt -> . FOR assign_stmt TO simple_exp DO cicle_body
    (83) for_stmt -> . FOR assign_stmt DOWNTO simple_exp DO cicle_body

    READLN          shift and go to state 27
    WRITE           shift and go to state 28
    WRITELN         shift and go to state 29
    ID              shift and go to state 30
    IF              shift and go to state 31
    WHILE           shift and go to state 32
    FOR             shift and go to state 33

    stmt_list                      shift and go to state 15
    stmt                           shift and go to state 16
    assign_stmt                    shift and go to state 17
    conditional_stmt               shift and go to state 18
    cicle_stmt                     shift and go to state 19
    readLn_stmt                    shift and go to state 20
    write_stmt                     shift and go to state 21
    writeln_stmt                   shift and go to state 22
    variable                       shift and go to state 23
    if_stmt                        shift and go to state 24
    while_stmt                     shift and go to state 25
    for_stmt                       shift and go to state 26

state 11

    (4) variables -> VAR vars .

    BEGIN           reduce using rule 4 (variables -> VAR vars .)


state 12

    (5) vars -> listVar . DOISPONTOS datatype SEMI
    (6) vars -> listVar . DOISPONTOS datatype SEMI vars

    DOISPONTOS      shift and go to state 34


state 13

    (7) listVar -> ID .
    (8) listVar -> ID . VIRG listVar

    DOISPONTOS      reduce using rule 7 (listVar -> ID .)
    VIRG            shift and go to state 35


state 14

    (1) Programa -> PROGRAM ID SEMI opt_variable block DOT .

    $end            reduce using rule 1 (Programa -> PROGRAM ID SEMI opt_variable block DOT .)


state 15

    (21) block -> BEGIN stmt_list . opt_semi END
    (25) stmt_list -> stmt_list . SEMI stmt
    (22) opt_semi -> . SEMI
    (23) opt_semi -> . empty
    (18) empty -> .

    SEMI            shift and go to state 37
    END             reduce using rule 18 (empty -> .)

    opt_semi                       shift and go to state 36
    empty                          shift and go to state 38

state 16

    (24) stmt_list -> stmt .

    SEMI            reduce using rule 24 (stmt_list -> stmt .)
    END             reduce using rule 24 (stmt_list -> stmt .)


state 17

    (26) stmt -> assign_stmt .

    SEMI            reduce using rule 26 (stmt -> assign_stmt .)
    END             reduce using rule 26 (stmt -> assign_stmt .)
    ELSE            reduce using rule 26 (stmt -> assign_stmt .)


state 18

    (27) stmt -> conditional_stmt .

    SEMI            reduce using rule 27 (stmt -> conditional_stmt .)
    END             reduce using rule 27 (stmt -> conditional_stmt .)
    ELSE            reduce using rule 27 (stmt -> conditional_stmt .)


state 19

    (28) stmt -> cicle_stmt .

    SEMI            reduce using rule 28 (stmt -> cicle_stmt .)
    END             reduce using rule 28 (stmt -> cicle_stmt .)
    ELSE            reduce using rule 28 (stmt -> cicle_stmt .)


state 20

    (29) stmt -> readLn_stmt .

    SEMI            reduce using rule 29 (stmt -> readLn_stmt .)
    END             reduce using rule 29 (stmt -> readLn_stmt .)
    ELSE            reduce using rule 29 (stmt -> readLn_stmt .)


state 21

    (30) stmt -> write_stmt .

    SEMI            reduce using rule 30 (stmt -> write_stmt .)
    END             reduce using rule 30 (stmt -> write_stmt .)
    ELSE            reduce using rule 30 (stmt -> write_stmt .)


state 22

    (31) stmt -> writeln_stmt .

    SEMI            reduce using rule 31 (stmt -> writeln_stmt .)
    END             reduce using rule 31 (stmt -> writeln_stmt .)
    ELSE            reduce using rule 31 (stmt -> writeln_stmt .)


state 23

    (32) assign_stmt -> variable . ASSIGN expression

    ASSIGN          shift and go to state 39


state 24

    (74) conditional_stmt -> if_stmt .

    SEMI            reduce using rule 74 (conditional_stmt -> if_stmt .)
    END             reduce using rule 74 (conditional_stmt -> if_stmt .)
    ELSE            reduce using rule 74 (conditional_stmt -> if_stmt .)


state 25

    (77) cicle_stmt -> while_stmt .

    SEMI            reduce using rule 77 (cicle_stmt -> while_stmt .)
    END             reduce using rule 77 (cicle_stmt -> while_stmt .)
    ELSE            reduce using rule 77 (cicle_stmt -> while_stmt .)


state 26

    (78) cicle_stmt -> for_stmt .

    SEMI            reduce using rule 78 (cicle_stmt -> for_stmt .)
    END             reduce using rule 78 (cicle_stmt -> for_stmt .)
    ELSE            reduce using rule 78 (cicle_stmt -> for_stmt .)


state 27

    (66) readLn_stmt -> READLN . LPAREN variable RPAREN

    LPAREN          shift and go to state 40


state 28

    (67) write_stmt -> WRITE . LPAREN output_args RPAREN

    LPAREN          shift and go to state 41


state 29

    (68) writeln_stmt -> WRITELN . LPAREN output_args RPAREN
    (69) writeln_stmt -> WRITELN . LPAREN RPAREN

    LPAREN          shift and go to state 42


state 30

    (19) variable -> ID .
    (20) variable -> ID . LSQBRACKET expression RSQBRACKET

    ASSIGN          reduce using rule 19 (variable -> ID .)
    MULT            reduce using rule 19 (variable -> ID .)
    DIVIDE          reduce using rule 19 (variable -> ID .)
    MODULO          reduce using rule 19 (variable -> ID .)
    DIV_INT         reduce using rule 19 (variable -> ID .)
    EQUAL           reduce using rule 19 (variable -> ID .)
    NEQUAL          reduce using rule 19 (variable -> ID .)
    LESSTHEN        reduce using rule 19 (variable -> ID .)
    LESSEQUALS      reduce using rule 19 (variable -> ID .)
    GREATTHAN       reduce using rule 19 (variable -> ID .)
    GREATEQUALS     reduce using rule 19 (variable -> ID .)
    PLUS            reduce using rule 19 (variable -> ID .)
    MINUS           reduce using rule 19 (variable -> ID .)
    AND             reduce using rule 19 (variable -> ID .)
    OR              reduce using rule 19 (variable -> ID .)
    THEN            reduce using rule 19 (variable -> ID .)
    DO              reduce using rule 19 (variable -> ID .)
    SEMI            reduce using rule 19 (variable -> ID .)
    END             reduce using rule 19 (variable -> ID .)
    TO              reduce using rule 19 (variable -> ID .)
    DOWNTO          reduce using rule 19 (variable -> ID .)
    ELSE            reduce using rule 19 (variable -> ID .)
    RPAREN          reduce using rule 19 (variable -> ID .)
    VIRG            reduce using rule 19 (variable -> ID .)
    RSQBRACKET      reduce using rule 19 (variable -> ID .)
    LSQBRACKET      shift and go to state 43


state 31

    (75) if_stmt -> IF . expression THEN stmt
    (76) if_stmt -> IF . expression THEN stmt ELSE stmt
    (33) expression -> . logical_or_expr
    (34) logical_or_expr -> . logical_or_expr OR logical_and_expr
    (35) logical_or_expr -> . logical_and_expr
    (36) logical_and_expr -> . logical_and_expr AND logical_not_expr
    (37) logical_and_expr -> . logical_not_expr
    (38) logical_not_expr -> . NOT logical_not_expr
    (39) logical_not_expr -> . relational_expr
    (40) relational_expr -> . simple_exp
    (41) relational_expr -> . simple_exp relational_operator simple_exp
    (48) simple_exp -> . simple_exp add_op termo
    (49) simple_exp -> . termo
    (52) termo -> . termo mul_op fator
    (53) termo -> . fator
    (58) fator -> . LENGTH LPAREN expression RPAREN
    (59) fator -> . LPAREN expression RPAREN
    (60) fator -> . variable
    (61) fator -> . NUMBER
    (62) fator -> . REAL_LITERAL
    (63) fator -> . STRING_LITERAL
    (64) fator -> . TRUE
    (65) fator -> . FALSE
    (19) variable -> . ID
    (20) variable -> . ID LSQBRACKET expression RSQBRACKET

    NOT             shift and go to state 48
    LENGTH          shift and go to state 53
    LPAREN          shift and go to state 54
    NUMBER          shift and go to state 56
    REAL_LITERAL    shift and go to state 57
    STRING_LITERAL  shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    ID              shift and go to state 30

    expression                     shift and go to state 44
    logical_or_expr                shift and go to state 45
    logical_and_expr               shift and go to state 46
    logical_not_expr               shift and go to state 47
    relational_expr                shift and go to state 49
    simple_exp                     shift and go to state 50
    termo                          shift and go to state 51
    fator                          shift and go to state 52
    variable                       shift and go to state 55

state 32

    (79) while_stmt -> WHILE . expression DO cicle_body
    (33) expression -> . logical_or_expr
    (34) logical_or_expr -> . logical_or_expr OR logical_and_expr
    (35) logical_or_expr -> . logical_and_expr
    (36) logical_and_expr -> . logical_and_expr AND logical_not_expr
    (37) logical_and_expr -> . logical_not_expr
    (38) logical_not_expr -> . NOT logical_not_expr
    (39) logical_not_expr -> . relational_expr
    (40) relational_expr -> . simple_exp
    (41) relational_expr -> . simple_exp relational_operator simple_exp
    (48) simple_exp -> . simple_exp add_op termo
    (49) simple_exp -> . termo
    (52) termo -> . termo mul_op fator
    (53) termo -> . fator
    (58) fator -> . LENGTH LPAREN expression RPAREN
    (59) fator -> . LPAREN expression RPAREN
    (60) fator -> . variable
    (61) fator -> . NUMBER
    (62) fator -> . REAL_LITERAL
    (63) fator -> . STRING_LITERAL
    (64) fator -> . TRUE
    (65) fator -> . FALSE
    (19) variable -> . ID
    (20) variable -> . ID LSQBRACKET expression RSQBRACKET

    NOT             shift and go to state 48
    LENGTH          shift and go to state 53
    LPAREN          shift and go to state 54
    NUMBER          shift and go to state 56
    REAL_LITERAL    shift and go to state 57
    STRING_LITERAL  shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    ID              shift and go to state 30

    expression                     shift and go to state 61
    logical_or_expr                shift and go to state 45
    logical_and_expr               shift and go to state 46
    logical_not_expr               shift and go to state 47
    relational_expr                shift and go to state 49
    simple_exp                     shift and go to state 50
    termo                          shift and go to state 51
    fator                          shift and go to state 52
    variable                       shift and go to state 55

state 33

    (82) for_stmt -> FOR . assign_stmt TO simple_exp DO cicle_body
    (83) for_stmt -> FOR . assign_stmt DOWNTO simple_exp DO cicle_body
    (32) assign_stmt -> . variable ASSIGN expression
    (19) variable -> . ID
    (20) variable -> . ID LSQBRACKET expression RSQBRACKET

    ID              shift and go to state 30

    assign_stmt                    shift and go to state 62
    variable                       shift and go to state 23

state 34

    (5) vars -> listVar DOISPONTOS . datatype SEMI
    (6) vars -> listVar DOISPONTOS . datatype SEMI vars
    (9) datatype -> . simpleType
    (10) datatype -> . structuredType
    (11) simpleType -> . INTEGER_TYPE
    (12) simpleType -> . BOOLEAN_TYPE
    (13) simpleType -> . STRING_TYPE
    (14) simpleType -> . REAL_TYPE
    (15) simpleType -> . CHAR_TYPE
    (16) structuredType -> . arrayType
    (17) arrayType -> . ARRAY LSQBRACKET NUMBER RANGE NUMBER RSQBRACKET OF simpleType

    INTEGER_TYPE    shift and go to state 66
    BOOLEAN_TYPE    shift and go to state 67
    STRING_TYPE     shift and go to state 68
    REAL_TYPE       shift and go to state 69
    CHAR_TYPE       shift and go to state 70
    ARRAY           shift and go to state 72

    datatype                       shift and go to state 63
    simpleType                     shift and go to state 64
    structuredType                 shift and go to state 65
    arrayType                      shift and go to state 71

state 35

    (8) listVar -> ID VIRG . listVar
    (7) listVar -> . ID
    (8) listVar -> . ID VIRG listVar

    ID              shift and go to state 13

    listVar                        shift and go to state 73

state 36

    (21) block -> BEGIN stmt_list opt_semi . END

    END             shift and go to state 74


state 37
